--- a/Tic Tac Toe/style.css
+++ b/Tic Tac Toe/style.css
@@ -3,9 +3,7 @@
     padding: 0;
     font-family: sans-serif;
 }
-main{
-    height: 100vh;
-    width: 100%;
+body{
     background-color: #fdeef0;
 }
 
@@ -104,4 +102,19 @@ main{
 }
 .new-main{
     background-color: #c1e9b5;
+}
+
+/* media */
+@media (max-width: 810px){
+    .container {
+        width: 75vw;
+    }
+    .game {
+        height: 69vw;
+        width: 75vw;
+    }
+    .box {
+        font-size: 3rem;
+    }
+    
 }
